final_lab/xilinx3/lab2/lab2.sdk/.metadata/.plugins/org.eclipse.cdt.ui/TestApp.build.log
11:37:44 **** Auto Build of configuration Debug for project TestApp ****
make all 
'Building file: ../src/lab2.c'
'Invoking: ARM gcc compiler'
arm-xilinx-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -I../../standalone_bsp_0/ps7_cortexa9_0/include -MMD -MP -MF"src/lab2.d" -MT"src/lab2.d" -o "src/lab2.o" "../src/lab2.c"
In file included from ../src/xutil.h:112:0,
                 from ../src/lab2.c:3:
../../standalone_bsp_0/ps7_cortexa9_0/include/xbasic_types.h:124:2: warning: #warning The xbasics_type.h file is deprecated and users should use xil_types.h and xil_assert. [-Wcpp]
 #warning  The xbasics_type.h file is deprecated and users should use xil_types.h and xil_assert.
  ^
../../standalone_bsp_0/ps7_cortexa9_0/include/xbasic_types.h:125:2: warning: #warning Please refer the Standalone BSP UG647 for further details [-Wcpp]
 #warning  Please refer the Standalone BSP UG647 for further details
  ^
../src/lab2.c: In function 'main':
../src/lab2.c:32:27: error: 'XPAR_LED1_DEVICE_ID' undeclared (first use in this function)
  XGpio_Initialize(&led[0],XPAR_LED1_DEVICE_ID);
                           ^
../src/lab2.c:32:27: note: each undeclared identifier is reported only once for each function it appears in
../src/lab2.c:34:27: error: 'XPAR_LED2_DEVICE_ID' undeclared (first use in this function)
  XGpio_Initialize(&led[1],XPAR_LED2_DEVICE_ID);
                           ^
../src/lab2.c:36:27: error: 'XPAR_LED3_DEVICE_ID' undeclared (first use in this function)
  XGpio_Initialize(&led[2],XPAR_LED3_DEVICE_ID);
                           ^
../src/lab2.c:38:27: error: 'XPAR_LED4_DEVICE_ID' undeclared (first use in this function)
  XGpio_Initialize(&led[3],XPAR_LED4_DEVICE_ID);
                           ^
../src/lab2.c:51:3: warning: implicit declaration of function 'rand' [-Wimplicit-function-declaration]
   rValue=rand()%4;
   ^
make: *** [src/lab2.o] ´íÎó 1

11:37:45 Build Finished (took 1s.246ms)

